--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,10 +14,10 @@ spec:
     spec:
       containers:
         - name: nestjs
-          image: ytthpch/nestjs-jenkin-k8s:1.3
+          image: ytthpch/nestjs-jenkin-k8s:latest
           ports:
-            - containerPort: 8000
+            - containerPort: 3000
           imagePullPolicy: Always
-          env:
-            - name: APP_VERSION
-              value: "1.2"
+          envFrom:
+            - configMapRef:
+                name: nestjs-jenkin-k8s-env
