--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         DOCKER_TAG = '1.4'
         K8S_NAMESPACE = 'default'
         K8S_DEPLOYMENT_NAME = 'nestjs-jenkin-k8s-app'
-        K8S_SERVICE_NAME = 'nestjs-service'
+        K8S_SERVICE_NAME = 'nestjs-jenkin-k8s-service'
     }
     
     stages {
@@ -29,11 +29,11 @@ pipeline {
             }
         }
         
-        stage('Run Tests') {
-            steps {
-                sh 'npm run test'
-            }
-        }
+        // stage('Run Tests') {
+        //     steps {
+        //         sh 'npm run test'
+        //     }
+        // }
         
         stage('Build Application') {
             steps {
@@ -47,6 +47,11 @@ pipeline {
                   string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE')
                 ]) {
                   sh '''
+                    cat "$ENV_FILE"
+                    echo ""
+                    echo "===================="
+                    echo "ENV FILE CONTENT END"
+                    echo "===================="
                     echo "$ENV_FILE" > .env
 
                     kubectl delete configmap nestjs-jenkin-k8s-env \
@@ -71,10 +76,17 @@ pipeline {
         
         stage('Push Docker Image') {
             steps {
-                script {
-                    docker.withRegistry('https://index.docker.io/v1/', 'docker-hub-credentials') {
-                        docker.image("${DOCKER_IMAGE}:${DOCKER_TAG}").push()
-                    }
+                withCredentials([
+                    usernamePassword(
+                        credentialsId: 'docker-hub-credentials',
+                        usernameVariable: 'DOCKER_USER',
+                        passwordVariable: 'DOCKER_PASS'
+                    )
+                ]) {
+                    sh '''
+                        echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                        docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
+                    '''
                 }
             }
         }
