--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,12 +20,13 @@ pipeline {
             steps {
                 sh 'node --version'
                 sh 'npm --version'
+                sh 'npm i -g pnpm'
             }
         }
         
         stage('Install Dependencies') {
             steps {
-                sh 'npm install'
+                sh 'pnpm install'
             }
         }
         
@@ -37,7 +38,7 @@ pipeline {
         
         stage('Build Application') {
             steps {
-                sh 'npm run build'
+                sh 'pnpm run build'
             }
         }
         
@@ -47,7 +48,7 @@ pipeline {
                   string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE')
                 ]) {
                   sh '''
-                    cat "$ENV_FILE"
+                    echo "$ENV_FILE"
                     echo ""
                     echo "===================="
                     echo "ENV FILE CONTENT END"
