--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,6 +19,12 @@ pipeline {
         stage('Setup Node.js') {
             steps {
                 sh '''
+                    # Install Node.js 20 using nvm (no sudo required)
+                    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
+                    export NVM_DIR="$HOME/.nvm"
+                    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+                    nvm install 20
+                    nvm use 20
                     node --version
                     npm --version
                 '''
@@ -27,19 +33,34 @@ pipeline {
         
         stage('Install Dependencies') {
             steps {
-                sh 'npm install'
+                sh '''
+                    export NVM_DIR="$HOME/.nvm"
+                    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+                    nvm use 20
+                    npm install
+                '''
             }
         }
         
         // stage('Run Tests') {
         //     steps {
-        //         sh 'npm run test'
+        //         sh '''
+        //             export NVM_DIR="$HOME/.nvm"
+        //             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+        //             nvm use 20
+        //             npm run test
+        //         '''
         //     }
         // }
         
         stage('Build Application') {
             steps {
-                sh 'npm run build'
+                sh '''
+                    export NVM_DIR="$HOME/.nvm"
+                    [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+                    nvm use 20
+                    npm run build
+                '''
             }
         }
         
