--- a/jenkinsfile
+++ b/jenkinsfile
@@ -64,29 +64,31 @@ pipeline {
             }
         }
         
-        stage('Create Env ConfigMap') {
-            steps {
-                withCredentials([
-                  string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE')
-                ]) {
-                  sh '''
-                    echo "=== ENV FILE CONTENT ==="
-                    echo "$ENV_FILE"
-                    echo ""
-                    echo "=== END ENV FILE ==="
-                    echo "$ENV_FILE" > .env
+        // stage('Create Env ConfigMap') {
+        //     steps {
+        //         withCredentials([
+        //           string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
+        //           kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+        //         ]) {
+        //           sh '''
+        //             export KUBECONFIG="$KUBECONFIG"
+        //             echo "=== ENV FILE CONTENT ==="
+        //             echo "$ENV_FILE"
+        //             echo ""
+        //             echo "=== END ENV FILE ==="
+        //             echo "$ENV_FILE" > .env
 
-                    kubectl delete configmap nestjs-jenkin-k8s-env \
-                      --namespace=$K8S_NAMESPACE \
-                      --ignore-not-found
+        //             kubectl delete configmap nestjs-jenkin-k8s-env \
+        //               --namespace=$K8S_NAMESPACE \
+        //               --ignore-not-found
 
-                    kubectl create configmap nestjs-jenkin-k8s-env \
-                      --from-env-file=.env \
-                      --namespace=$K8S_NAMESPACE
-                  '''
-                }
-            }
-        }
+        //             kubectl create configmap nestjs-jenkin-k8s-env \
+        //               --from-env-file=.env \
+        //               --namespace=$K8S_NAMESPACE
+        //           '''
+        //         }
+        //     }
+        // }
         
         stage('Build Docker Image') {
             steps {
@@ -113,24 +115,28 @@ pipeline {
             }
         }
         
-        stage('Deploy to Kubernetes') {
-            steps {
-                script {
-                    // อัปเดต image version ใน deployment.yaml
-                    sh "sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: ${DOCKER_IMAGE}:${DOCKER_TAG}|g' k8s/deployment.yaml"
-                    
-                    // อัปเดต environment variables ใน deployment.yaml
-                    sh "sed -i 's|value: \".*\"|value: \"${DOCKER_TAG}\"|g' k8s/deployment.yaml"
-                    
-                    // ใช้ kubectl ในการ deploy
-                    sh "kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}"
-                    sh "kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}"
-                    
-                    // รอให้ deployment พร้อม
-                    sh "kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}"
-                }
-            }
-        }
+        // stage('Deploy to Kubernetes') {
+        //     steps {
+        //         withCredentials([
+        //           kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+        //         ]) {
+        //             script {
+        //                 sh '''
+        //                     export KUBECONFIG="$KUBECONFIG"
+        //                     # อัปเดต image version ใน deployment.yaml
+        //                     sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
+                            
+        //                     # ใช้ kubectl ในการ deploy
+        //                     kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
+        //                     kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
+                            
+        //                     # รอให้ deployment พร้อม
+        //                     kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
+        //                 '''
+        //             }
+        //         }
+        //     }
+        // }
     }
     
     post {
