--- a/jenkinsfile
+++ b/jenkinsfile
@@ -64,79 +64,39 @@ pipeline {
             }
         }
         
-        // stage('Create Env ConfigMap') {
-        //     steps {
-        //         withCredentials([
-        //           string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
-        //           kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
-        //         ]) {
-        //           sh '''
-        //             export KUBECONFIG="$KUBECONFIG"
-        //             echo "=== ENV FILE CONTENT ==="
-        //             echo "$ENV_FILE"
-        //             echo ""
-        //             echo "=== END ENV FILE ==="
-        //             echo "$ENV_FILE" > .env
-
-        //             kubectl delete configmap nestjs-jenkin-k8s-env \
-        //               --namespace=$K8S_NAMESPACE \
-        //               --ignore-not-found
-
-        //             kubectl create configmap nestjs-jenkin-k8s-env \
-        //               --from-env-file=.env \
-        //               --namespace=$K8S_NAMESPACE
-        //           '''
-        //         }
-        //     }
-        // }
-        
-        stage('Build Docker Image') {
-            steps {
-                sh '''
-                    docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} .
-                '''
-            }
-        }
-        
-        stage('Push Docker Image') {
+        stage('Create Env ConfigMap') {
             steps {
                 withCredentials([
-                    usernamePassword(
-                        credentialsId: 'docker-hub-credentials',
-                        usernameVariable: 'DOCKER_USER',
-                        passwordVariable: 'DOCKER_PASS'
-                    )
+                  string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
+                  kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
                 ]) {
-                    sh '''
-                        echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
-                        docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
-                    '''
+                  sh '''
+                    export KUBECONFIG="$KUBECONFIG"
+                    echo "$ENV_FILE" > .env
+                    kubectl delete configmap nestjs-jenkin-k8s-env --namespace=$K8S_NAMESPACE --ignore-not-found
+                    kubectl create configmap nestjs-jenkin-k8s-env --from-env-file=.env --namespace=$K8S_NAMESPACE
+                  '''
                 }
             }
         }
         
-        // stage('Deploy to Kubernetes') {
-        //     steps {
-        //         withCredentials([
-        //           kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
-        //         ]) {
-        //             script {
-        //                 sh '''
-        //                     export KUBECONFIG="$KUBECONFIG"
-        //                     # อัปเดต image version ใน deployment.yaml
-        //                     sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
-                            
-        //                     # ใช้ kubectl ในการ deploy
-        //                     kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
-        //                     kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
-                            
-        //                     # รอให้ deployment พร้อม
-        //                     kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
-        //                 '''
-        //             }
-        //         }
-        //     }
-        // }
+        stage('Deploy to Kubernetes') {
+            steps {
+                withCredentials([
+                  kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+                ]) {
+                    script {
+                        sh '''
+                            export KUBECONFIG="$KUBECONFIG"
+                            sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
+                            kubectl apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
+                            kubectl apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
+                            kubectl rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
+                        '''
+                    }
+                }
+            }
+        }
     }
     
     post {
