--- a/jenkinsfile
+++ b/jenkinsfile
@@ -68,10 +68,10 @@ pipeline {
             steps {
                 withCredentials([
                   string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
-                  kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBE_CONFIG')
+                  file(credentialsId: 'k8s-config', variable: 'KUBE_CONFIG')
                 ]) {
                   sh '''
-                    export KUBE_CONFIG="$KUBE_CONFIG"
+                    export KUBECONFIG="$KUBE_CONFIG"
                     echo "=== ENV FILE CONTENT ==="
                     echo "$ENV_FILE"
                     echo ""
@@ -118,11 +118,11 @@ pipeline {
         stage('Deploy to Kubernetes') {
             steps {
                 withCredentials([
-                  kubeconfigFile(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+                  file(credentialsId: 'k8s-config', variable: 'KUBE_CONFIG')
                 ]) {
                     script {
                         sh '''
-                            export KUBECONFIG="$KUBECONFIG"
+                            export KUBECONFIG="$KUBE_CONFIG"
                             # อัปเดต image version ใน deployment.yaml
                             sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
                             
