--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,16 +1,13 @@
 pipeline {
-    agent {
-        docker {
-            image 'node:20-alpine'
-            args '-v /var/run/docker.sock:/var/run/docker.sock'
-        }
-    }
+    agent any
 
     environment {
-        DOCKER_IMAGE = 'ytthpch/nestjs-jenkin-k8s'
-        DOCKER_TAG = "${BUILD_NUMBER}"
-        K8S_NAMESPACE = 'default'
-        K8S_DEPLOYMENT = 'nestjs-jenkin-k8s-app'
+        DOCKER_IMAGE = "ytthpch/nestjs-jenkin-k8s"
+        DOCKER_TAG   = "${BUILD_NUMBER}"
+
+        K8S_NAMESPACE  = "default"
+        K8S_DEPLOYMENT = "nestjs-jenkin-k8s-app"
+        CONTAINER_NAME = "nestjs"
     }
 
     stages {
@@ -25,7 +22,7 @@ pipeline {
         stage('Install Dependencies') {
             steps {
                 sh '''
-                  npm ci
+                  npm install
                 '''
             }
         }
@@ -38,32 +35,10 @@ pipeline {
             }
         }
 
-        stage('Create ConfigMap') {
-            steps {
-                withCredentials([
-                    string(credentialsId: 'nestjs-jenkin-k8s-env', variable: 'ENV_FILE'),
-                    file(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
-                ]) {
-
-                    sh '''
-                      echo "$ENV_FILE" > .env
-
-                      kubectl --kubeconfig=$KUBECONFIG delete configmap app-env \
-                        -n $K8S_NAMESPACE --ignore-not-found
-
-                      kubectl --kubeconfig=$KUBECONFIG create configmap app-env \
-                        --from-env-file=.env \
-                        -n $K8S_NAMESPACE
-                    '''
-                }
-            }
-        }
-
-        stage('Build Docker Image') {
+        stage('Build Image') {
             steps {
                 sh '''
                   docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} .
-                  docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest
                 '''
             }
         }
@@ -71,17 +46,15 @@ pipeline {
         stage('Push Image') {
             steps {
                 withCredentials([
-                    usernamePassword(
-                        credentialsId: 'docker-hub-credentials',
-                        usernameVariable: 'USER',
-                        passwordVariable: 'PASS'
-                    )
+                  usernamePassword(
+                    credentialsId: 'docker-hub-credentials',
+                    usernameVariable: 'DOCKER_USER',
+                    passwordVariable: 'DOCKER_PASS'
+                  )
                 ]) {
-
                     sh '''
-                      echo "$PASS" | docker login -u "$USER" --password-stdin
+                      echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
                       docker push ${DOCKER_IMAGE}:${DOCKER_TAG}
-                      docker push ${DOCKER_IMAGE}:latest
                     '''
                 }
             }
@@ -90,18 +63,17 @@ pipeline {
         stage('Deploy') {
             steps {
                 withCredentials([
-                    file(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
+                  file(credentialsId: 'k8s-config', variable: 'KUBECONFIG')
                 ]) {
-
                     sh '''
                       kubectl --kubeconfig=$KUBECONFIG \
                         set image deployment/${K8S_DEPLOYMENT} \
-                        app=${DOCKER_IMAGE}:${DOCKER_TAG} \
-                        -n $K8S_NAMESPACE
+                        ${CONTAINER_NAME}=${DOCKER_IMAGE}:${DOCKER_TAG} \
+                        -n ${K8S_NAMESPACE}
 
                       kubectl --kubeconfig=$KUBECONFIG \
                         rollout status deployment/${K8S_DEPLOYMENT} \
-                        -n $K8S_NAMESPACE
+                        -n ${K8S_NAMESPACE}
                     '''
                 }
             }
@@ -110,7 +82,7 @@ pipeline {
 
     post {
         success {
-            echo "✅ Deploy Success: ${DOCKER_IMAGE}:${DOCKER_TAG}"
+            echo "✅ Deploy Success"
         }
 
         failure {
