--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -4,20 +4,33 @@ metadata:
   name: nestjs-jenkin-k8s-app
 spec:
   replicas: 1
+
   selector:
     matchLabels:
       app: nestjs-jenkin-k8s-app
+
   template:
     metadata:
       labels:
         app: nestjs-jenkin-k8s-app
+
     spec:
       containers:
         - name: nestjs
           image: ytthpch/nestjs-jenkin-k8s:latest
+          imagePullPolicy: Always
+
           ports:
             - containerPort: 3000
-          imagePullPolicy: Always
+
           envFrom:
             - configMapRef:
                 name: nestjs-jenkin-k8s-env
+
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
