--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,5 @@
 pipeline {
-   agent {
-        docker {
-            image 'node:20'
-            args '-u root:root'
-        }
-    }
+   agent any
     
     environment {
         DOCKER_IMAGE = "ytthpch/nestjs-jenkin-k8s"
@@ -27,7 +22,7 @@ pipeline {
         stage('Install Dependencies') {
             steps {
                 sh '''
-                  npm install
+                    docker run --rm -v ${WORKSPACE}:/app -w /app node:20 npm install
                 '''
             }
         }
@@ -35,7 +30,7 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
-                  npm run build
+                    docker run --rm -v ${WORKSPACE}:/app -w /app node:20 npm run build
                 '''
             }
         }
