--- a/jenkinsfile
+++ b/jenkinsfile
@@ -77,12 +77,18 @@ pipeline {
                     echo "=== END ENV FILE ==="
                     echo "$ENV_FILE" > .env
 
-                    kubectl --kubeconfig="$KUBE_CONFIG" delete configmap nestjs-jenkin-k8s-env \
-                      --namespace=$K8S_NAMESPACE \
+                    docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBE_CONFIG}:/config/.kube/config \\
+                      bitnami/kubectl:latest \\
+                      --kubeconfig=/config/.kube/config \\
+                      delete configmap nestjs-jenkin-k8s-env \\
+                      --namespace=$K8S_NAMESPACE \\
                       --ignore-not-found
 
-                    kubectl --kubeconfig="$KUBE_CONFIG" create configmap nestjs-jenkin-k8s-env \
-                      --from-env-file=.env \
+                    docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBE_CONFIG}:/config/.kube/config \\
+                      bitnami/kubectl:latest \\
+                      --kubeconfig=/config/.kube/config \\
+                      create configmap nestjs-jenkin-k8s-env \\
+                      --from-env-file=/workspace/.env \\
                       --namespace=$K8S_NAMESPACE
                   '''
                 }
@@ -125,11 +131,21 @@ pipeline {
                             sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
                             
                             # ใช้ kubectl ในการ deploy
-                            kubectl --kubeconfig="$KUBECONFIG" apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
-                            kubectl --kubeconfig="$KUBECONFIG" apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
+                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
+                              bitnami/kubectl:latest \\
+                              --kubeconfig=/config/.kube/config \\
+                              apply -f /workspace/k8s/deployment.yaml -n ${K8S_NAMESPACE}
+                              
+                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
+                              bitnami/kubectl:latest \\
+                              --kubeconfig=/config/.kube/config \\
+                              apply -f /workspace/k8s/service.yaml -n ${K8S_NAMESPACE}
                             
                             # รอให้ deployment พร้อม
-                            kubectl --kubeconfig="$KUBECONFIG" rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
+                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
+                              bitnami/kubectl:latest \\
+                              --kubeconfig=/config/.kube/config \\
+                              rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
                         '''
                     }
                 }
