--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            image 'docker:24-dind'
+            args '--privileged'
+        }
+    }
     
     environment {
         DOCKER_IMAGE = 'ytthpch/nestjs-jenkin-k8s'
@@ -10,33 +15,27 @@ pipeline {
     }
     
     stages {
+        stage('Setup Tools') {
+            steps {
+                sh '''
+                    # Install Node.js and other required tools
+                    apk add --no-cache nodejs npm curl git
+                    node --version
+                    npm --version
+                    docker --version
+                '''
+            }
+        }
+        
         stage('Checkout') {
             steps {
                 git branch: 'main', url: 'https://github.com/poom-ytthpch/nestjs-jenkin-k8s.git'
             }
         }
         
-        stage('Setup Node.js') {
-            steps {
-                sh '''
-                    # Install Node.js 20 using nvm (no sudo required)
-                    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.0/install.sh | bash
-                    export NVM_DIR="$HOME/.nvm"
-                    [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-                    nvm install 20
-                    nvm use 20
-                    node --version
-                    npm --version
-                '''
-            }
-        }
-        
         stage('Install Dependencies') {
             steps {
                 sh '''
-                    export NVM_DIR="$HOME/.nvm"
-                    [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-                    nvm use 20
                     npm install
                 '''
             }
@@ -56,9 +55,6 @@ pipeline {
         stage('Build Application') {
             steps {
                 sh '''
-                    export NVM_DIR="$HOME/.nvm"
-                    [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-                    nvm use 20
                     npm run build
                 '''
             }
@@ -77,18 +73,17 @@ pipeline {
                     echo "=== END ENV FILE ==="
                     echo "$ENV_FILE" > .env
 
-                    docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBE_CONFIG}:/config/.kube/config \\
-                      bitnami/kubectl:latest \\
-                      --kubeconfig=/config/.kube/config \\
-                      delete configmap nestjs-jenkin-k8s-env \\
+                    # Install kubectl
+                    curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                    chmod +x kubectl
+                    mv kubectl /usr/local/bin/
+
+                    kubectl --kubeconfig="$KUBE_CONFIG" delete configmap nestjs-jenkin-k8s-env \\
                       --namespace=$K8S_NAMESPACE \\
                       --ignore-not-found
 
-                    docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBE_CONFIG}:/config/.kube/config \\
-                      bitnami/kubectl:latest \\
-                      --kubeconfig=/config/.kube/config \\
-                      create configmap nestjs-jenkin-k8s-env \\
-                      --from-env-file=/workspace/.env \\
+                    kubectl --kubeconfig="$KUBE_CONFIG" create configmap nestjs-jenkin-k8s-env \\
+                      --from-env-file=.env \\
                       --namespace=$K8S_NAMESPACE
                   '''
                 }
@@ -127,25 +122,22 @@ pipeline {
                 ]) {
                     script {
                         sh '''
+                            # Install kubectl if not already installed
+                            if ! command -v kubectl &> /dev/null; then
+                                curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                                chmod +x kubectl
+                                mv kubectl /usr/local/bin/
+                            fi
+                            
                             # อัปเดต image version ใน deployment.yaml
                             sed -i 's|image: ytthpch/nestjs-jenkin-k8s:.*|image: '${DOCKER_IMAGE}':'${DOCKER_TAG}'|g' k8s/deployment.yaml
                             
                             # ใช้ kubectl ในการ deploy
-                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
-                              bitnami/kubectl:latest \\
-                              --kubeconfig=/config/.kube/config \\
-                              apply -f /workspace/k8s/deployment.yaml -n ${K8S_NAMESPACE}
-                              
-                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
-                              bitnami/kubectl:latest \\
-                              --kubeconfig=/config/.kube/config \\
-                              apply -f /workspace/k8s/service.yaml -n ${K8S_NAMESPACE}
+                            kubectl --kubeconfig="$KUBECONFIG" apply -f k8s/deployment.yaml -n ${K8S_NAMESPACE}
+                            kubectl --kubeconfig="$KUBECONFIG" apply -f k8s/service.yaml -n ${K8S_NAMESPACE}
                             
                             # รอให้ deployment พร้อม
-                            docker run --rm -v ${WORKSPACE}:/workspace -v ${KUBECONFIG}:/config/.kube/config \\
-                              bitnami/kubectl:latest \\
-                              --kubeconfig=/config/.kube/config \\
-                              rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
+                            kubectl --kubeconfig="$KUBECONFIG" rollout status deployment/${K8S_DEPLOYMENT_NAME} -n ${K8S_NAMESPACE}
                         '''
                     }
                 }
