--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,51 +1,6 @@
 pipeline {
 
-  agent {
-    kubernetes {
-      yaml """
-apiVersion: v1
-kind: Pod
-spec:
-  containers:
-
-  - name: node
-    image: node:20
-    command:
-    - cat
-    tty: true
-    volumeMounts:
-    - name: workspace
-      mountPath: /home/jenkins/agent
-
-  - name: docker
-    image: docker:24
-    command:
-    - cat
-    tty: true
-    volumeMounts:
-    - name: workspace
-      mountPath: /home/jenkins/agent
-    - name: docker-socket
-      mountPath: /var/run/docker.sock
-
-  - name: kubectl
-    image: bitnami/kubectl:latest
-    command:
-    - cat
-    tty: true
-    volumeMounts:
-    - name: workspace
-      mountPath: /home/jenkins/agent
-
-  volumes:
-  - name: workspace
-    emptyDir: {}
-  - name: docker-socket
-    hostPath:
-      path: /var/run/docker.sock
-"""
-    }
-  }
+  agent any
 
   environment {
     DOCKER_IMAGE = 'ytthpch/nestjs-jenkin-k8s'
